# pa-sim

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: FUTURE_MP_INTEGRATION.md  SESSION_LOG_2025_01_20.md  TECHNICAL_OVERVIEW.md
docs/concepts/: nn_material_discovery.md
docs/studies/: er_kpb2cl5_690nm_pa.md
examples/: er_kpb2cl5_detailed_analysis.py  er_kpb2cl5_pa_test.py  quickstart.py  s_parameter_sensitivity.py  validate_against_literature.py
src/pa_sim/: __init__.py
src/pa_sim/analysis/: __init__.py  pa_parameters.py
src/pa_sim/core/: __init__.py  material.py  rate_equations.py  simulation.py
src/pa_sim/materials/: __init__.py  database.py
src/pa_sim/visualization/: __init__.py  plots.py
tests/: __init__.py  test_core.py
