[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pa-sim"
version = "0.1.0"
description = "A generalizable photon avalanching simulation framework for lanthanide-doped nanoparticles"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "PA-Sim Contributors"}
]
keywords = [
    "photon avalanching",
    "lanthanide",
    "upconversion",
    "nanoparticles",
    "simulation",
    "rate equations",
    "photophysics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.5",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=2.0",
]
all = [
    "pa-sim[viz,dev,docs]",
]

[project.urls]
Homepage = "https://github.com/yourusername/pa-sim"
Documentation = "https://pa-sim.readthedocs.io"
Repository = "https://github.com/yourusername/pa-sim"
Issues = "https://github.com/yourusername/pa-sim/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pa_sim.materials" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "D", "UP"]
ignore = ["D100", "D104"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
